<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.cloudforgeci</groupId>
    <artifactId>cfc-core</artifactId>
    <version>3.2.6-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>
  <artifactId>cloudforge-api</artifactId>
  <version>3.2.6-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>CloudForge API</name>

  <scm>
    <connection>scm:git:https://github.com/CloudForgeCI/cfc-core.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/CloudForgeCI/cfc-core.git</developerConnection>
    <url>https://maven.pkg.github.com/CloudForgeCI/cfc-core</url>
  </scm>

  <properties>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
    <!-- Matches the version cloudforge-localstack/cloudforge-ministack/cloudforge-manager each
         pin independently — no central AWS SDK BOM entry exists in the root pom yet. -->
    <aws.sdk.version>2.25.0</aws.sdk.version>
  </properties>

  <dependencies>
    <!-- Dependency on cloudforge-core for interfaces and enums (version from parent BOM) -->
    <dependency>
      <groupId>com.cloudforgeci</groupId>
      <artifactId>cloudforge-core</artifactId>
    </dependency>
    <!-- AWS CDK dependencies (versions from parent BOM) -->
    <dependency>
      <groupId>software.amazon.awscdk</groupId>
      <artifactId>aws-cdk-lib</artifactId>
    </dependency>
    <dependency>
      <groupId>software.constructs</groupId>
      <artifactId>constructs</artifactId>
    </dependency>
    <!-- CDK Nag for compliance validation (version from parent BOM) -->
    <dependency>
      <groupId>io.github.cdklabs</groupId>
      <artifactId>cdknag</artifactId>
    </dependency>
    <!-- AWS SDK v2 clients for CloudForgeDeployment's direct-to-AWS path (AwsDirectDeployer) —
         real CloudFormation/S3 calls, distinct from the CDK synthesis-time deps above. -->
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>cloudformation</artifactId>
      <version>${aws.sdk.version}</version>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>s3</artifactId>
      <version>${aws.sdk.version}</version>
    </dependency>
    <!-- Resolves the real (or LocalStack's fixed test) account id once per AwsDirectDeployer, to
         substitute CDK's ${AWS::AccountId} pseudo-parameter token in asset-manifest bucket names —
         see LocalStackCdkAssetPublisher's class javadoc for the bug this closes. -->
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>sts</artifactId>
      <version>${aws.sdk.version}</version>
    </dependency>
    <!-- AWS Service Catalog client for the deploy:catalog path (ServiceCatalogDeployer) —
         provisioning against pre-published products, the SC_PROVISION capability's actions. -->
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>servicecatalog</artifactId>
      <version>${aws.sdk.version}</version>
    </dependency>
    <!-- Local emulator pipelines (api orchestrates; mechanics stay in target modules) -->
    <dependency>
      <groupId>com.cloudforgeci</groupId>
      <artifactId>cloudforge-ministack</artifactId>
    </dependency>
    <dependency>
      <groupId>com.cloudforgeci</groupId>
      <artifactId>cloudforge-localstack</artifactId>
    </dependency>
    <!-- JUnit 5 for testing (version and scope from parent BOM) -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Hibernate Validator for Jakarta Bean Validation (version from parent BOM) -->
    <dependency>
      <groupId>org.hibernate.validator</groupId>
      <artifactId>hibernate-validator</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Jakarta EL API (version from parent BOM) -->
    <dependency>
      <groupId>jakarta.el</groupId>
      <artifactId>jakarta.el-api</artifactId>
    </dependency>
    <!-- Expression Language implementation (version from parent BOM) -->
    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>jakarta.el</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Jackson YAML for CloudFormation template YAML generation -->
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
      </plugin>
      <!-- Diagnostic-only, not wired into any lifecycle phase — run explicitly via
           `mvn org.pitest:pitest-maven:mutationCoverage`. Scoped to core.rules (compliance
           enforcement) rather than the whole module: mutation testing re-runs the test suite
           once per surviving mutant, and this module's full suite is thousands of tests —
           unscoped, a full run would take hours. -->
      <plugin>
        <groupId>org.pitest</groupId>
        <artifactId>pitest-maven</artifactId>
        <version>1.30.0</version>
        <dependencies>
          <dependency>
            <groupId>org.pitest</groupId>
            <artifactId>pitest-junit5-plugin</artifactId>
            <version>1.2.3</version>
          </dependency>
        </dependencies>
        <configuration>
          <targetClasses>
            <param>com.cloudforgeci.api.core.rules.*</param>
          </targetClasses>
          <targetTests>
            <param>com.cloudforgeci.api.core.rules.*</param>
          </targetTests>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
